[gd_scene load_steps=27 format=2]

[ext_resource path="res://ressources/Ennemis/Smhuile/Inactif/Smhuile_inactif_sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/doduo.gd" type="Script" id=2]
[ext_resource path="res://ressources/Ennemis/Smhuile/Mort/Smhuile_mort_sheet.png" type="Texture" id=3]
[ext_resource path="res://ressources/Ennemis/Smhuile/Marche/Smuile_marche_sheet.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.1042, 8.52721 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 47, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 94, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 141, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 47, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 50, 47, 50 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 47, 50, 47, 50 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 94, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 94, 50, 47, 50 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 100, 47, 50 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 47, 100, 47, 50 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 47, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 94, 0, 47, 50 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 47, 50, 47, 50 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 50, 47, 50 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 94, 50, 47, 50 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 0, 100, 47, 50 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "mort",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "marche",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=22]
radius = 8.49056

[node name="Doduo" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Collision_doduo" type="CollisionShape2D" parent="."]
scale = Vector2( 3.737, 5.277 )
shape = SubResource( 1 )

[node name="Sprite_doduo" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 21 )
animation = "marche"
frame = 5
playing = true
flip_h = true

[node name="Pieds" type="RayCast2D" parent="."]
position = Vector2( 32.476, 41.559 )
enabled = true
cast_to = Vector2( 0, 9.921 )

[node name="Face" type="RayCast2D" parent="."]
position = Vector2( 39.597, 0 )
rotation = -1.5708
scale = Vector2( 8.787, 1 )
enabled = true
cast_to = Vector2( 0, 9.921 )

[node name="Hit_box" type="Area2D" parent="."]

[node name="Collision_doduo" type="CollisionShape2D" parent="Hit_box"]
scale = Vector2( 3.737, 5.277 )
shape = SubResource( 1 )

[node name="Detection" type="Area2D" parent="."]

[node name="Collision_doduo" type="CollisionShape2D" parent="Detection"]
scale = Vector2( 60, 60 )
shape = SubResource( 22 )

[node name="Canon" type="Position2D" parent="."]
position = Vector2( 30.26, 5.862 )

[connection signal="animation_finished" from="Sprite_doduo" to="." method="_on_Sprite_doduo_animation_finished"]
[connection signal="body_entered" from="Hit_box" to="." method="_on_Hit_box_body_entered"]
[connection signal="body_exited" from="Hit_box" to="." method="_on_Hit_box_body_exited"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
